# esp32-ai-chat

./: README.md
my_ai_chat(语音合成开发中)/: Makefile  partitions.csv  sdkconfig
my_ai_chat(语音合成开发中)/components/my_board/: CMakeLists.txt
my_ai_chat(语音合成开发中)/components/my_board/my_board_v1_0/: board.h
my_ai_chat(语音合成开发中)/components/volcengine/: CMakeLists.txt
my_ai_chat(语音合成开发中)/components/volcengine/include/: WedStream.h
my_ai_chat(语音合成开发中)/main/: baidu_tts.c  baidu_tts.h  baidu_vtt.h  lv_gui.c  minimax_chat.c  minimax_chat.h
my_ai_chat(语音识别完成)/: sdkconfig.old
my_ai_chat(语音识别完成)/components/espressif__esp_lcd_touch_ft5x06/: .component_hash
my_ai_chat(语音识别完成)/components/my_board/my_board_v1_0/: board_pins_config.c
my_ai_chat(语音识别完成)/components/volcengine/: WedStream.c  volcengine_vtt.c
my_ai_chat(语音识别完成)/components/volcengine/include/: volcengine_vtt.h
my_ai_chat(语音识别完成)/main/: CMakeLists.txt  baidu_vtt.c  main.c
my_ai_chat_raw/: CMakeLists.txt  sdkconfig  sdkconfig.old
my_ai_chat_raw/components/espressif__esp_lcd_touch_ft5x06/: esp_lcd_touch_ft5x06.c
my_ai_chat_raw/components/my_board/: component.mk
my_ai_chat_raw/components/my_board/my_board_v1_0/: board.c  board_def.h
my_ai_chat_raw/components/volcengine/: CMakeLists.txt  WedStream.c  uuid.c  volcengine_common.c  volcengine_tts.c  volcengine_vtt.c
my_ai_chat_raw/components/volcengine/include/: WedStream.h  volcengine_common.h  volcengine_tts.h  volcengine_vtt.h
my_ai_chat_raw/main/: idf_component.yml  img_bilibili120.c  lv_gui.h  main.c
